[gd_scene load_steps=4 format=3 uid="uid://d7wy7crfyakd"]

[ext_resource type="Script" uid="uid://cnb4r0nl52w60" path="res://Scripts/player_stats_ui.gd" id="1_idp5u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umhg1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idp5u"]
bg_color = Color(0, 0.821314, 0.156548, 1)

[node name="player_stats_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idp5u")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 646.0
color = Color(0, 0, 0, 1)

[node name="inventory_and_stats" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.0
offset_top = -324.0
offset_right = 574.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_stats" type="VBoxContainer" parent="inventory_and_stats"]
custom_minimum_size = Vector2(381, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Happiness_Border" type="ReferenceRect" parent="inventory_and_stats/main_stats"]
custom_minimum_size = Vector2(0, 255)
layout_mode = 2
border_color = Color(1, 1, 1, 1)
border_width = 20.0
editor_only = false

[node name="happiness" type="VBoxContainer" parent="inventory_and_stats/main_stats/Happiness_Border"]
custom_minimum_size = Vector2(0, 243)
layout_mode = 2
offset_left = 18.0
offset_top = 4.0
offset_right = 362.0
offset_bottom = 247.0

[node name="happiness_title" type="Label" parent="inventory_and_stats/main_stats/Happiness_Border/happiness"]
custom_minimum_size = Vector2(0, 104)
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Happiness"
horizontal_alignment = 1
vertical_alignment = 1

[node name="happiness_bar" type="ProgressBar" parent="inventory_and_stats/main_stats/Happiness_Border/happiness"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_umhg1")
theme_override_styles/fill = SubResource("StyleBoxFlat_idp5u")
rounded = true
show_percentage = false

[node name="Money_Border" type="ReferenceRect" parent="inventory_and_stats/main_stats"]
custom_minimum_size = Vector2(0, 183)
layout_mode = 2
border_color = Color(1, 1, 1, 1)
border_width = 20.0
editor_only = false

[node name="money" type="VBoxContainer" parent="inventory_and_stats/main_stats/Money_Border"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
offset_top = 4.0
offset_right = 381.0
offset_bottom = 176.0

[node name="money_title" type="Label" parent="inventory_and_stats/main_stats/Money_Border/money"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Money"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actual_money" type="HBoxContainer" parent="inventory_and_stats/main_stats/Money_Border/money"]
layout_mode = 2
alignment = 1

[node name="value" type="Label" parent="inventory_and_stats/main_stats/Money_Border/money/actual_money"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dollar" type="Label" parent="inventory_and_stats/main_stats/Money_Border/money/actual_money"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "$"
horizontal_alignment = 2

[node name="Time_Border" type="ReferenceRect" parent="inventory_and_stats/main_stats"]
custom_minimum_size = Vector2(0, 202)
layout_mode = 2
border_color = Color(1, 1, 1, 1)
border_width = 20.0
editor_only = false

[node name="time" type="VBoxContainer" parent="inventory_and_stats/main_stats/Time_Border"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.5
offset_top = -99.0
offset_right = 190.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="time_title" type="Label" parent="inventory_and_stats/main_stats/Time_Border/time"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="inventory_and_stats/main_stats/Time_Border/time"]
layout_mode = 2

[node name="time_actual" type="Label" parent="inventory_and_stats/main_stats/Time_Border/time/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 61
text = "0:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AM_and_PM" type="Label" parent="inventory_and_stats/main_stats/Time_Border/time/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 61
text = "AM"

[node name="Inventory_Border" type="ReferenceRect" parent="inventory_and_stats"]
custom_minimum_size = Vector2(763, 0)
layout_mode = 2
size_flags_horizontal = 4
border_color = Color(1, 1, 1, 1)
border_width = 20.0
editor_only = false

[node name="inventory" type="VBoxContainer" parent="inventory_and_stats/Inventory_Border"]
custom_minimum_size = Vector2(553, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -1.0
offset_right = 10.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ReferenceRect" type="ReferenceRect" parent="inventory_and_stats/Inventory_Border/inventory"]
custom_minimum_size = Vector2(746, 112)
layout_mode = 2
size_flags_horizontal = 0
border_color = Color(1, 1, 1, 1)
border_width = 20.0
editor_only = false

[node name="Label" type="Label" parent="inventory_and_stats/Inventory_Border/inventory/ReferenceRect"]
custom_minimum_size = Vector2(0, 104)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.5
offset_top = -51.5
offset_right = 366.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 61
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="inventory_and_stats/Inventory_Border/inventory"]
layout_mode = 2
size_flags_vertical = 3
region_rect = Rect2(45, 45, 45, 45)
